Implement safe reconciliation, tests, and security automation