@@ -3,7 +3,7 @@ package com.novibe.common.util;
 import com.novibe.common.base_structures.BypassRoute;
 import com.novibe.common.base_structures.DnsProfile;
 import com.novibe.common.exception.UserInputException;
-import lombok.Cleanup;
+import com.novibe.common.security.NetworkTargetPolicy;
 import org.xbill.DNS.ARecord;
 import org.xbill.DNS.Address;
 import org.xbill.DNS.DohResolver;
@@ -14,29 +14,40 @@ import org.xbill.DNS.SimpleResolver;
 import org.xbill.DNS.TextParseException;
 import org.xbill.DNS.Type;
 
+import java.io.IOException;
+import java.net.InetAddress;
+import java.net.URI;
 import java.net.UnknownHostException;
 import java.time.Duration;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-
-import static java.util.Objects.nonNull;
+import java.util.concurrent.Future;
 
 public class DonorDnsUtils {
 
     public static void replaceIPs(List<BypassRoute> bypassRoutes, DnsProfile dnsProfile) {
         Resolver dnsResolver = getDnsResolver(dnsProfile);
         dnsResolver.setTimeout(Duration.ofSeconds(5));
-        @Cleanup ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
-        for (BypassRoute bypassRoute : bypassRoutes) {
-            Log.io("Comparing IP for %s via the configured donor DNS".formatted(bypassRoute.website()));
-            executor.submit(() -> replaceIp(bypassRoute, dnsResolver));
+        try (ExecutorService executor = Executors.newFixedThreadPool(32)) {
+            List<Future<?>> tasks = new ArrayList<>();
+            for (BypassRoute bypassRoute : bypassRoutes) {
+                tasks.add(executor.submit(() -> replaceIp(bypassRoute, dnsResolver)));
+            }
+            for (Future<?> task : tasks) task.get();
+        } catch (InterruptedException exception) {
+            Thread.currentThread().interrupt();
+            throw new IllegalStateException("Donor DNS resolution was interrupted", exception);
+        } catch (ExecutionException exception) {
+            throw new IllegalStateException("Donor DNS resolution failed", exception.getCause());
         }
     }
 
     private static void replaceIp(BypassRoute bypassRoute, Resolver dnsResolver) {
         String donorIp = fetchDonorIp(bypassRoute.website(), dnsResolver);
-        if (nonNull(donorIp) && !bypassRoute.ip().equals(donorIp)) {
+        if (donorIp != null && !bypassRoute.ip().equals(donorIp)) {
             Log.common("Changed IP for %s: %s -> %s".formatted(bypassRoute.website(), bypassRoute.ip(), donorIp));
             bypassRoute.ip(donorIp);
         }
@@ -45,15 +56,20 @@ public class DonorDnsUtils {
     private static Resolver getDnsResolver(DnsProfile dnsProfile) {
         String dns = dnsProfile.donorDns();
         try {
-            if (dns.startsWith("http")) {
+            if (dns.startsWith("https://")) {
+                URI uri = URI.create(dns);
+                NetworkTargetPolicy.requirePublicHttps(uri);
                 return new DohResolver(dns);
-            } else if (Address.isDottedQuad(dns)) {
-                return new SimpleResolver(dns);
-            } else {
-                throw new UnknownHostException();
             }
-        } catch (UnknownHostException e) {
-            throw UserInputException.noStackTrace("Invalid DONOR_DNS value: %s. Value must follow Ipv4 or DoH format".formatted(dns));
+            if (Address.isDottedQuad(dns)) {
+                NetworkTargetPolicy.requirePublicAddress(InetAddress.getByName(dns));
+                return new SimpleResolver(dns);
+            }
+            throw new UnknownHostException();
+        } catch (IOException | IllegalArgumentException exception) {
+            throw UserInputException.noStackTrace(
+                    "Invalid DONOR_DNS value. Use a public IPv4 address or public HTTPS DoH endpoint."
+            );
         }
     }
 
@@ -62,14 +78,13 @@ public class DonorDnsUtils {
             Lookup lookup = new Lookup(domain, Type.A);
             lookup.setResolver(resolver);
             Record[] records = lookup.run();
-            if (nonNull(records) && records.length > 0) {
+            if (records != null && records.length > 0) {
                 return ((ARecord) records[0]).getAddress().getHostAddress();
             }
             return null;
-        } catch (TextParseException e) {
+        } catch (TextParseException exception) {
             Log.fail("Invalid domain address: " + domain);
             return null;
         }
     }
-
 }
